syntax = "proto3";

package clawker.agent.v1;

option go_package = "github.com/schmitthub/clawker/internal/clawkerd/protocol/v1";

// AgentReportingService — clawkerd calls these on the control plane.
// Used for registration and event reporting.
service AgentReportingService {
  // Register authenticates and registers an agent with the control plane.
  // clawkerd calls this on startup, providing its listen address for callbacks.
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

// AgentCommandService — the control plane calls these on clawkerd.
// Each operation is its own RPC with own types (containerd shim v2 pattern).
service AgentCommandService {
  // RunInit sends an init spec to the agent. The agent executes the steps
  // and streams progress events back to the control plane.
  rpc RunInit(RunInitRequest) returns (stream RunInitResponse);
}

// RegisterRequest is sent by clawkerd to the control plane on startup.
message RegisterRequest {
  // container_id is the Docker container ID (hostname inside container).
  string container_id = 1;
  // secret is the shared secret for authentication.
  string secret = 2;
  // version is the clawkerd binary version.
  string version = 3;
  // listen_port is the gRPC port clawkerd is listening on inside the container.
  // The control plane resolves the container's IP via Docker inspect and connects
  // back to <container_ip>:<listen_port> for AgentCommandService RPCs.
  uint32 listen_port = 4;
}

// RegisterResponse indicates whether registration was accepted.
// On success, includes ClawkerdConfiguration for logger initialization.
message RegisterResponse {
  // accepted is true if the agent was registered successfully.
  bool accepted = 1;
  // reason provides context when registration is rejected.
  string reason = 2;
  // config is the operational configuration for clawkerd (identity, OTEL, file logging).
  // Only populated when accepted is true.
  ClawkerdConfiguration config = 3;
}

// ClawkerdConfiguration is the operational config delivered by the control plane
// during registration. clawkerd uses this to initialize its logger with structured
// logging, OTEL bridge, and project/agent context fields.
// Named "Clawkerd" (not "Agent") because "agent" means Claude Code instance in our domain.
message ClawkerdConfiguration {
  // project is the project name for logger context fields.
  string project = 1;
  // agent is the agent name for logger context fields.
  string agent = 2;
  // otel configures the OTEL logging bridge (endpoint, timeouts, batching).
  OtelLogConfig otel = 3;
  // file_logging configures file-based log rotation.
  FileLogConfig file_logging = 4;
}

// OtelLogConfig configures the OTEL zerolog bridge for streaming logs to the collector.
message OtelLogConfig {
  // endpoint is the OTLP HTTP endpoint (host:port, no scheme). e.g. "otel-collector:4318"
  string endpoint = 1;
  // insecure disables TLS (true for local collector).
  bool insecure = 2;
  // timeout_seconds is the export timeout (default: 5).
  int32 timeout_seconds = 3;
  // max_queue_size is the batch processor queue size (default: 2048).
  int32 max_queue_size = 4;
  // export_interval_seconds is the batch export interval (default: 5).
  int32 export_interval_seconds = 5;
}

// FileLogConfig configures file-based logging with rotation.
message FileLogConfig {
  // enabled enables file logging.
  bool enabled = 1;
  // max_size_mb is the max log file size in MB before rotation (default: 50).
  int32 max_size_mb = 2;
  // max_age_days is the max days to retain old logs (default: 7).
  int32 max_age_days = 3;
  // max_backups is the max number of old log files to keep (default: 3).
  int32 max_backups = 4;
  // compress enables gzip compression of rotated log files (default: true).
  bool compress = 5;
}

// RunInitRequest is the declarative init specification sent by the control plane.
// clawkerd owns execution — it runs the steps and reports progress.
message RunInitRequest {
  // steps is the ordered list of init steps to execute.
  repeated InitStep steps = 1;
}

// InitStep is a single init command to execute.
message InitStep {
  // name identifies this step (e.g. "firewall", "git-config").
  string name = 1;
  // command is the bash command to execute.
  string command = 2;
}

// RunInitResponse is streamed from clawkerd back to the control plane
// as each init step progresses.
message RunInitResponse {
  // step_name identifies which step this event is for.
  string step_name = 1;
  // status is the current status of this step.
  InitEventStatus status = 2;
  // output contains captured stdout from the command.
  string output = 3;
  // error contains stderr or error message if the step failed.
  string error = 4;
}

// InitEventStatus tracks the lifecycle of an init step.
enum InitEventStatus {
  INIT_EVENT_STATUS_UNSPECIFIED = 0;
  // STARTED indicates a step has begun execution.
  INIT_EVENT_STATUS_STARTED = 1;
  // COMPLETED indicates a step finished successfully.
  INIT_EVENT_STATUS_COMPLETED = 2;
  // FAILED indicates a step encountered an error.
  INIT_EVENT_STATUS_FAILED = 3;
  // READY is the final event — all init steps are complete.
  INIT_EVENT_STATUS_READY = 4;
}
